--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,11 @@
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
         </dependency>
-        <!-- uncomment this to get JSON support
+        <!-- The dependency below is included to get JSON support -->
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-binding</artifactId>
         </dependency>
-        -->
     </dependencies>
     <properties>
         <jersey.version>3.1.5</jersey.version>
